<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBgColor"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/whiteBgColor"
        android:orientation="vertical">

        <LinearLayout
            style="@style/style_recycle_item_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/image_size_small3"
                android:layout_height="@dimen/image_size_normal1"
                android:src="@drawable/ic_rfid" />

            <TextView
                style="@style/style_recycle_text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tip_rfid" />

            <TextView
                android:id="@+id/tv_rfid"
                style="@style/style_recycle_text_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_scan_null" />
        </LinearLayout>

      <!--  <include layout="@layout/view_divider_item" />-->

        <LinearLayout
            style="@style/style_recycle_item_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:visibility="gone"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/image_size_small3"
                android:layout_height="@dimen/image_size_small3"
                android:src="@drawable/ic_qrcode" />

            <TextView
                style="@style/style_recycle_text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tip_qrcode" />

            <TextView
                android:id="@+id/tv_qrcode"
                style="@style/style_recycle_text_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_qrcode" />
        </LinearLayout>

        <include layout="@layout/view_divider_item" />

        <LinearLayout
            style="@style/style_recycle_item_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/image_size_small3"
                android:layout_height="@dimen/image_size_normal1"
                android:src="@drawable/ic_material" />

            <TextView
                android:id="@+id/textView"
                style="@style/style_recycle_text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tip_material" />

            <Spinner
                android:id="@+id/spn_material"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:dropDownHorizontalOffset="50dp"
                android:dropDownVerticalOffset="30dp"
                android:gravity="right"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <include layout="@layout/view_divider_item" />

        <LinearLayout
            style="@style/style_recycle_item_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/image_size_small3"
                android:layout_height="@dimen/image_size_normal1"
                android:src="@drawable/ic_goods_right" />

            <TextView
                style="@style/style_recycle_text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tip_goods_right" />

            <Spinner
                android:id="@+id/spn_goods_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:dropDownHorizontalOffset="50dp"
                android:dropDownVerticalOffset="30dp"
                android:gravity="right"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <include layout="@layout/view_divider_item" />

        <LinearLayout
            style="@style/style_recycle_item_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/image_size_small3"
                android:layout_height="@dimen/image_size_normal1"
                android:src="@drawable/ic_goods_alias" />

            <TextView
                style="@style/style_recycle_text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_goods_alias" />

            <EditText
                android:id="@+id/et_goods_alias"
                style="@style/style_edit_null"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:hint="@string/hint_goods_alias"
                android:maxEms="40" />
        </LinearLayout>

    <include layout="@layout/view_divider_item" />

    <LinearLayout
        style="@style/style_recycle_item_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/image_size_small3"
            android:layout_height="@dimen/image_size_normal1"
            android:src="@drawable/ic_goods_alias" />

        <TextView
            style="@style/style_recycle_text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_plan_name" />

        <EditText
            android:id="@+id/et_plan_name"
            style="@style/style_edit_null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:hint="@string/hint_plan_name"
            android:maxEms="40" />
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/windowBgColor" />

    <include layout="@layout/view_divider_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/slt_btn_normal"
            android:clickable="true"
            android:gravity="center"
            android:minHeight="@dimen/bar_action_height">

            <ImageView
                android:layout_width="@dimen/image_size_small2"
                android:layout_height="@dimen/image_size_small2"
                android:src="@drawable/ic_clear" />

            <TextView
                style="@style/style_recycle_text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="@dimen/view_margin_normal1"
                android:text="@string/action_clear"
                android:textSize="@dimen/text_size_normal1"/>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/view_margin_normal3"
            android:layout_marginTop="@dimen/view_margin_normal3"
            android:background="@color/windowBgColor" />

        <LinearLayout
            android:id="@+id/ll_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/slt_btn_normal"
            android:clickable="true"
            android:gravity="center"
            android:minHeight="@dimen/bar_action_height">
            <ImageView
                android:layout_width="@dimen/image_size_small2"
                android:layout_height="@dimen/image_size_small2"
                android:src="@drawable/ic_in_ok" />

            <TextView
                style="@style/style_recycle_text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/view_margin_normal1"
                android:text="@string/action_ok"
                android:textSize="@dimen/text_size_normal1" />

        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
</LinearLayout>