<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"

        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_login" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_account" />

            <EditText
                android:id="@+id/et_username"
                style="@style/style_login_edit"
                android:layout_toRightOf="@+id/iv_user"
                android:hint="请输入用户名"
                android:imeOptions="actionNext"
                android:inputType="text" />

            <View
                style="@style/style_view_line_login_edit"
                android:layout_alignLeft="@+id/et_username"
                android:layout_alignRight="@+id/et_username"
                android:layout_below="@+id/et_username" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_password" />

            <EditText
                android:id="@+id/et_password"
                style="@style/style_login_edit"
                android:layout_toRightOf="@+id/iv_password"
                android:hint="请输入密码"
                android:inputType="textPassword" />

            <View
                style="@style/style_view_line_login_edit"
                android:layout_alignLeft="@+id/et_password"
                android:layout_alignRight="@+id/et_password"
                android:layout_below="@+id/et_password" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="255dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:background="@drawable/shape_oval_login"
            android:text="@string/action_login"
            android:textColor="@android:color/white" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    android:layout_marginTop="@dimen/view_margin_normal3">
    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/action_register"
        android:textColor="@color/textHintColor"
        android:textSize="@dimen/text_size_small2" />
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="@color/textHintColor" />
    <TextView
        android:id="@+id/tv_fotget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/action_forget"
        android:textColor="@color/textHintColor"
        android:textSize="@dimen/text_size_small2" />
</LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_gravity="bottom">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/hint_surport"
                android:textColor="@color/textHintColorLight"
                android:textSize="@dimen/text_size_small1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="8dp"
                android:text="@string/hint_version"
                android:textColor="@color/textHintColorLight"
                android:textSize="@dimen/text_size_small1" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>